Update 'pqdkcmeuu-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:144fb73300dd514a05b55e0739d907f24885947a@sha256:60abac38382032111e36d1cfdcc26d22f2f26ebb48087b25ec895ddc0b52ca5c

--- a/components/pqdkcmeuu-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/pqdkcmeuu-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pqdkcmeuu-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:144fb73300dd514a05b55e0739d907f24885947a@sha256:60abac38382032111e36d1cfdcc26d22f2f26ebb48087b25ec895ddc0b52ca5c
+          name: container-image
